# voiceboard

./: .gitignore  Cargo.toml  Dockerfile  README.md  SETUP.md
.github/workflows/: release.yml
scripts/: setup-windows.ps1
src/: audio.rs  clipboard.rs  main.rs  transcribe.rs
