[package]
name = "voiceboard"
version = "0.1.0"
edition = "2021"
description = "CLI mic → whisper transcription → clipboard"
license = "MIT"
repository = "https://github.com/yanralapdy/voiceboard"

[dependencies]
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
whisper-rs = "0.16"
arboard = "3"
anyhow = "1"
